<resources>
    <string name="app_name">Personal Medical Records</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Personal Medical Records</string>
    <string name="nav_header_subtitle">View selection</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_home">Home</string>
    <string name="nav_anamnesis">Anamnesis</string>
    <string name="nav_caretaking">Caretaker information</string>
    <string name="nav_medication">Medication</string>
    <string name="nav_logs">Medical logs</string>
    <string name="nav_recorder">Recorder</string>
    <string name="nav_appointments">Appointments</string>
    <string name="frag_home_title">Home</string>
    <string name="frag_anamnesis_title">Anamnesis</string>
    <string name="frag_caretaking_title">Caretaking Information</string>
    <string name="frag_logs_title">Medical Logs</string>
    <string name="frag_medication_title">Medication</string>
    <string name="frag_appointments_title">Appointments</string>
    <string name="frag_recorder_title">Recording</string>
    <string name="log_1_title">Example log title</string>
    <string name="log_1_content">Example log description</string>
    <string name="logs_1_date">13 maart 2019 (example date)</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_cancel">Cancel</string>

</resources>
